# starfleet-command-agent

./: .gitignore  main.py  pyproject.toml  test_agent.py
src/agents/: graph.py
src/prompts/: system_prompt.py
src/tools/: calculator_tool.py  mission_logs_tool.py  search_tool.py
tests/: test-usage.py  test_agent.py
ui/: app.py
